Fixed login component alignment issues and added a login button

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,6 +2,6 @@
   text-align: center;
 }
 
-.login {
+#login {
   background-color: #bae1ff;
 }
